extension_tests/valid/for/simpleForTest.wacc
#Simplest test for a for loop in wacc
#Even Alex could pass it

begin
    for (int i = 0; i < 10; i + 1) do
       println i 
    done
end
