extension_tests/invalid/syntaxErr/for/forNoDo.wacc
# for missing closing do

# Output
# #syntax_eeror#

# Exit:
# 100

# Program:

begin
    for (inti = 0; i < 10; i+1)
        skip
    done
end
